fix: fix SVG icon cropping in datasource list (#13641)

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -15734,8 +15734,9 @@ textarea.tj-text-input-widget {
   }
 }
 
-div.ds-svg-container img {
+.ds-svg-container svg {
   padding: 2px;
+  object-fit: contain;
 }
 
 .custom-textarea-height {
